# django-schema-graph

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  manage.py  package.json  pyproject.toml  requirements.txt  run_test_server.py  setup.py  tox.ini  verify-version.sh  webpack.common.js  webpack.config.js
.github/workflows/: front-end-tests.yml  release-to-pypi.yml  tests.yml
assets/: vue2vis.utils.js
assets/components/: App.vue  Graph.vue  GraphEditor.vue  Network.vue
assets/entrypoints/: index.js
assets/plugins/: vuetify.js
assets/state/: graphData.js
schema_graph/: modules.py  schema.py  views.py
schema_graph/static/schema_graph/: App.js
schema_graph/templates/schema_graph/: schema.html
schema_graph/tests/: models.py  settings.py  test_schema.py
tests/: models.py  settings.py  test_schema.py  test_views.py  urls.py
tests/app_a/: models.py
tests/app_b/: models.py
tests/app_c/: models.py
tests/app_d/: models.py
tests/basic/: models.py
tests/generic/: models.py
tests/inheritance/: models.py
tests/installed/: models.py
tests/not_installed/: models.py
tests/proxy/: models.py
