[tool.poetry]
name = "django-schema-graph"
version = "1.2.0"
description = "An interactive graph of your Django model structure."
authors = ["Charlie Denton <charlie@meshy.co.uk>"]
license = "MIT"
packages = [
    { include = "schema_graph" },
]
include = ["schema_graph/static/schema_graph/main.js"]
repository = "https://github.com/meshy/django-schema-graph"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = ">=3.6,<3.10"
attrs = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
