[tool.poetry]
name = "django-schema-graph"
version = "3.1.0"
description = "An interactive graph of your Django model structure."
authors = ["Charlie Denton <charlie@meshy.co.uk>"]
license = "MIT"
packages = [
    { include = "schema_graph" },
]
include = ["schema_graph/static/schema_graph/main.js"]
repository = "https://github.com/meshy/django-schema-graph"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Documentation",
    "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = ">=3.10"
attrs = ">=21.4.0"
cattrs = ">=22.1.0"

[tool.poetry.dev-dependencies]
django-environ = "^0.4.5"
pytest = "^6.2.2"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[project.urls]
Source = "https://github.com/meshy/django-schema-graph/"
